--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,24 +6,34 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint './**/*.{ts,tsx,js,jsx}' -f stylish"
+    "lint": "eslint './**/*.{ts,tsx,js,jsx}' -f stylish",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "c8": "^7.11.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^41.0.0",
+    "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "typescript": "4.5.x",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-tsconfig-paths": "^3.4.1",
+    "vitest": "^0.5.8"
   }
 }
