--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -19,7 +19,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+
+    "types": ["vite/client", "vitest", "@types/testing-library__jest-dom", "@types/react"]
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
