feat: adds baseline tailwindcss configuration

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,13 +24,16 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "autoprefixer": "^10.4.2",
     "c8": "^7.11.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-unicorn": "^41.0.0",
     "jsdom": "^19.0.0",
+    "postcss": "^8.4.7",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.x",
     "vite": "^2.8.0",
     "vite-tsconfig-paths": "^3.4.1",
