--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "lint": "eslint './**/*.{ts,tsx,js,jsx}' -f stylish",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cypress": "cypress"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -28,6 +29,7 @@
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
     "c8": "^7.11.0",
+    "cypress": "^9.5.1",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
