feat: adds Cypress tests corresponding to examples given

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,7 @@ Cargo.lock
 # Support for Project snippet scope
 
 # End of https://www.toptal.com/developers/gitignore/api/node,rust,visualstudiocode
+
+# :: Cypress cache
+screenshotsFolder/
+videosFolder/
